Images optimization on HP

--- a/www.topmonks.com/src/html/index.html
+++ b/www.topmonks.com/src/html/index.html
@@ -549,11 +549,16 @@ TopMonks - Software development partner for your business
         <div class="mdc-layout-grid__inner">
           <div class="person--photo mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
             <img alt="[foto] Simona Zábržová"
-                 src="https://insight.topmonks.com/avatar/simona-zabrzova"
+                 src="https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_1,f_auto/https://insight.topmonks.com/avatar/simona-zabrzova"
+                 srcset="https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_1,f_auto/https://insight.topmonks.com/avatar/simona-zabrzova 1x,
+                         https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_1.5,f_auto/https://insight.topmonks.com/avatar/simona-zabrzova 1.5x,
+                         https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_2,f_auto/https://insight.topmonks.com/avatar/simona-zabrzova 2x,
+                         https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_3,f_auto/https://insight.topmonks.com/avatar/simona-zabrzova 3x"
                  onerror="this.onerror=null; this.src='/images/monk_logo-c877778634.png'"
                  width="112" height="112"></div>
           <div class="box_member-contact mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
-            <p><span itemprop="name">Simona Zábržová</span><br><a itemprop="telephone" href="tel:+420777285544">+420 777 285 544</a><br>
+            <p><span itemprop="name">Simona Zábržová</span><br>
+              <a itemprop="telephone" href="tel:+420777285544">+420 777 285 544</a><br>
               <a itemprop="email" href="mailto:simona.zabrzova&#64;topmonks.com">simona.zabrzova@​topmonks.com</a></p>
           </div>
         </div>
@@ -567,12 +572,17 @@ TopMonks - Software development partner for your business
         <div class="mdc-layout-grid__inner">
           <div class="person--photo mdc-layout-grid__cell mdc-layout-grid__cell--span-4"><img
             alt="[foto] Ladislav Gerencséry"
-            src="https://insight.topmonks.com/avatar/ladislav-gerencsery"
+            src="https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_1,f_auto/https://insight.topmonks.com/avatar/ladislav-gerencsery"
+            srcset="https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_1,f_auto/https://insight.topmonks.com/avatar/ladislav-gerencsery 1x,
+                    https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_1.5,f_auto/https://insight.topmonks.com/avatar/ladislav-gerencsery 1.5x,
+                    https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_2,f_auto/https://insight.topmonks.com/avatar/ladislav-gerencsery 2x,
+                    https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_3,f_auto/https://insight.topmonks.com/avatar/ladislav-gerencsery 3x"
             onerror="this.onerror=null; this.src='/images/monk_logo-c877778634.png'"
             width="112" height="112"></div>
-          <div class="box_member-contact mdc-layout-grid__cell mdc-layout-grid__cell--span-8"><p><span itemprop="name">Ladislav Gerencséry</span><br><a
-            itemprop="telephone" href="tel:+420606637915">+420&nbsp;606&nbsp;637&nbsp;915</a><br><a itemprop="email"
-                                                                                                    href="mailto:sales@topmonks.com">sales@​topmonks.com</a>
+          <div class="box_member-contact mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
+            <p><span itemprop="name">Ladislav Gerencséry</span><br>
+              <a itemprop="telephone" href="tel:+420606637915">+420&nbsp;606&nbsp;637&nbsp;915</a><br>
+              <a itemprop="email" href="mailto:sales@topmonks.com">sales@​topmonks.com</a>
           </p></div>
         </div>
       </div>
