--- a/www.topmonks.cz/src/html/index.html
+++ b/www.topmonks.cz/src/html/index.html
@@ -91,6 +91,7 @@
         <a href="https://www.pricefx.eu/site/" title="Pricef(x) homepage">{{sprite('img_logo_pricefx', '[logo] Pricef(x)')}}</a>
         <a href="https://zonky.cz/" title="Zonky homepage">{{sprite('img_logo_zonky', '[logo] Zonky')}}</a>
         <a href="https://www.adler.info/CZ/cs/Home/" title="Adler homepage">{{sprite('img_logo_adler', '[logo] Adler')}}</a>
+        <a href="https://www.shoptet.cz" title="Shoptet homepage">{{sprite('img_logo_shoptet', '[logo] Shoptet')}}</a>
       </div>
     </div>
   </div>
