--- a/www.xduediligence.com/src/html/index.html
+++ b/www.xduediligence.com/src/html/index.html
@@ -3,12 +3,13 @@
 
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description"
         content="We analyze teams, identify real leaders and help everyone in your organisation reach their full potential.">
   <title>Due Diligence Process Quantified</title>
-  <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700,900" rel="stylesheet">
-  <link href='https://fonts.googleapis.com/css?family=Nunito+Sans:400,300,300italic,400italic,700,700italic'
+  <link href='https://fonts.googleapis.com/css?family=Nunito+Sans:400,300,300italic,400italic,700,700italic,900'
         rel='stylesheet' type='text/css'>
 
   <link rel="apple-touch-icon" sizes="57x57" href="img/apple-icon-57x57.png">
@@ -77,7 +78,11 @@
               <div class="screen">
                 <a href="#video-modal" data-toggle="modal" data-target=".bd-example-modal-lg">
                   <img
-                    src="https://res.cloudinary.com/topmonks/image/upload/f_auto,dpr_auto/v1557036636/www.xduediligence.com/screen.png"
+                    src="https://res.cloudinary.com/topmonks/image/upload/f_auto,dpr_auto,w_635/v1557036636/www.xduediligence.com/screen.png"
+                    srcset="https://res.cloudinary.com/topmonks/image/upload/f_auto,dpr_1,w_635/v1557036778/www.xduediligence.com/screen.png 1x,
+                            https://res.cloudinary.com/topmonks/image/upload/f_auto,dpr_1.5,w_635/v1557036778/www.xduediligence.com/screen.png 1.5x,
+                            https://res.cloudinary.com/topmonks/image/upload/f_auto,dpr_2,w_635/v1557036778/www.xduediligence.com/screen.png 2x,
+                            https://res.cloudinary.com/topmonks/image/upload/f_auto,dpr_3,w_635/v1557036778/www.xduediligence.com/screen.png 3x"
                     class="img-fluid" alt="Play Video Image"></a>
               </div>
               <div class="button">
@@ -133,7 +138,11 @@
     <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
       <div class="col-lg-8">
         <img class="img-fluid"
-             src="https://res.cloudinary.com/topmonks/image/upload/f_auto,dpr_auto/v1557036778/www.xduediligence.com/lorem-ipsum-2.png"
+             src="https://res.cloudinary.com/topmonks/image/upload/f_auto,dpr_auto,w_740/v1557036778/www.xduediligence.com/lorem-ipsum-2.png"
+             srcset="https://res.cloudinary.com/topmonks/image/upload/f_auto,dpr_1,w_740/v1557036778/www.xduediligence.com/lorem-ipsum-2.png 1x,
+                     https://res.cloudinary.com/topmonks/image/upload/f_auto,dpr_1.5,w_740/v1557036778/www.xduediligence.com/lorem-ipsum-2.png 1.5x,
+                     https://res.cloudinary.com/topmonks/image/upload/f_auto,dpr_2,w_740/v1557036778/www.xduediligence.com/lorem-ipsum-2.png 2x,
+                     https://res.cloudinary.com/topmonks/image/upload/f_auto,dpr_3,w_740/v1557036778/www.xduediligence.com/lorem-ipsum-2.png 3x"
              alt="Organisation Look - Formal Structure">
       </div>
       <div class="col-lg-4">
@@ -166,7 +175,11 @@
     <div class="row justify-content-center no-gutters">
       <div class="col-lg-8">
         <img class="img-fluid"
-             src="https://res.cloudinary.com/topmonks/image/upload/f_auto,dpr_auto/v1557036888/www.xduediligence.com/lorem-ipsum-1.png"
+             src="https://res.cloudinary.com/topmonks/image/upload/f_auto,dpr_auto,w_740/v1557036888/www.xduediligence.com/lorem-ipsum-1.png"
+             srcset="https://res.cloudinary.com/topmonks/image/upload/f_auto,dpr_1,w_740/v1557036778/www.xduediligence.com/lorem-ipsum-1.png 1x,
+                     https://res.cloudinary.com/topmonks/image/upload/f_auto,dpr_1.5,w_740/v1557036778/www.xduediligence.com/lorem-ipsum-1.png 1.5x,
+                     https://res.cloudinary.com/topmonks/image/upload/f_auto,dpr_2,w_740/v1557036778/www.xduediligence.com/lorem-ipsum-1.png 2x,
+                     https://res.cloudinary.com/topmonks/image/upload/f_auto,dpr_3,w_740/v1557036778/www.xduediligence.com/lorem-ipsum-1.png 3x"
              alt="Organisation Look - Informal Structure">
       </div>
       <div class="col-lg-4 order-lg-first">
@@ -240,17 +253,29 @@
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img class="d-block w-100"
-                   src="https://res.cloudinary.com/topmonks/image/upload/f_auto,dpr_auto/v1557036948/www.xduediligence.com/funkce1.png"
+                   src="https://res.cloudinary.com/topmonks/image/upload/f_auto,dpr_auto,w_350/v1557036948/www.xduediligence.com/funkce1.png"
+                   srcset="https://res.cloudinary.com/topmonks/image/upload/f_auto,dpr_1,w_350/v1557036778/www.xduediligence.com/funkce1.png 1x,
+                           https://res.cloudinary.com/topmonks/image/upload/f_auto,dpr_1.5,w_350/v1557036778/www.xduediligence.com/funkce1.png 1.5x,
+                           https://res.cloudinary.com/topmonks/image/upload/f_auto,dpr_2,w_350/v1557036778/www.xduediligence.com/funkce1.png 2x,
+                           https://res.cloudinary.com/topmonks/image/upload/f_auto,dpr_3,w_350/v1557036778/www.xduediligence.com/funkce1.png 3x"
                    alt="First slide - Teams Analyzation">
             </div>
             <div class="carousel-item">
               <img class="d-block w-100"
-                   src="https://res.cloudinary.com/topmonks/image/upload/f_auto,dpr_auto/v1557036950/www.xduediligence.com/funkce2.png"
+                   src="https://res.cloudinary.com/topmonks/image/upload/f_auto,dpr_auto,w_350/v1557036950/www.xduediligence.com/funkce2.png"
+                   srcset="https://res.cloudinary.com/topmonks/image/upload/f_auto,dpr_1,w_350/v1557036778/www.xduediligence.com/funkce2.png 1x,
+                           https://res.cloudinary.com/topmonks/image/upload/f_auto,dpr_1.5,w_350/v1557036778/www.xduediligence.com/funkce2.png 1.5x,
+                           https://res.cloudinary.com/topmonks/image/upload/f_auto,dpr_2,w_350/v1557036778/www.xduediligence.com/funkce2.png 2x,
+                           https://res.cloudinary.com/topmonks/image/upload/f_auto,dpr_3,w_350/v1557036778/www.xduediligence.com/funkce2.png 3x"
                    alt="Second slide - Teams Analyzation">
             </div>
             <div class="carousel-item">
               <img class="d-block w-100"
-                   src="https://res.cloudinary.com/topmonks/image/upload/f_auto,dpr_auto/v1557036950/www.xduediligence.com/funkce3.png"
+                   src="https://res.cloudinary.com/topmonks/image/upload/f_auto,dpr_auto,w_350/v1557036950/www.xduediligence.com/funkce3.png"
+                   srcset="https://res.cloudinary.com/topmonks/image/upload/f_auto,dpr_1,w_350/v1557036778/www.xduediligence.com/funkce3.png 1x,
+                           https://res.cloudinary.com/topmonks/image/upload/f_auto,dpr_1.5,w_350/v1557036778/www.xduediligence.com/funkce3.png 1.5x,
+                           https://res.cloudinary.com/topmonks/image/upload/f_auto,dpr_2,w_350/v1557036778/www.xduediligence.com/funkce3.png 2x,
+                           https://res.cloudinary.com/topmonks/image/upload/f_auto,dpr_3,w_350/v1557036778/www.xduediligence.com/funkce3.png 3x"
                    alt="Third slide - Teams Analyzation">
             </div>
           </div>
