TM.studio - logo svg - converting

--- a/studio.topmonks.com/src/html/index.html
+++ b/studio.topmonks.com/src/html/index.html
@@ -323,27 +323,18 @@
           <h2 class="h2_black">Portfolio</h2>
         </div>
         <div
-          class="portfolio-logo order1 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-desktop">
-         <a title="website of PriceFx" href="https://www.pricefx.eu/site/"><img src="/images/logo/pricefx.png" alt="Logo Price(Fx)" height="34" width="137"></a>
+          class="portfolio-logo mdc-layout-grid__cell">
+         <a title="website of PriceFx" href="https://www.pricefx.eu/site/"><img src="/images/logo/pricefx_logo.svg" alt="Logo PriceFx" height="70px" width="137"></a>
+          <p>PriceFx is the pricing suite designed especially for the needs of a holistic pricing process.</p>
         </div>
         <div
-          class="portfolio-logo order3 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-desktop">
-          <a title="website of Techloop.io" href="https://techloop.io/"> <img src="/images/logo/techloop.io.png" alt="Logo Techloop.io" height="56" width="226"></a>
-        </div>
-        <div
-          class="portfolio-logo order5 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-desktop">
-          <a title="website of Go Real Europe" href="https://www.gorealeurope.com/">     <img src="/images/logo/realeurope.png" alt="Logo Go Real Europe" height="68" width="118"></a>
-        </div>
-        <div
-          class="order2 portfolio-text mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-desktop">
-          <p>Price f(x) is the pricing suite designed especially for the needs of a holistic pricing process.</p>
-        </div>
-        <div
-          class="order4 portfolio-text mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-desktop">
+          class="portfolio-logo mdc-layout-grid__cell">
+          <a title="website of Techloop.io" href="https://techloop.io/"> <img src="/images/logo/techloop.io_logo.svg" alt="Logo Techloop.io" height="70px" width="226"></a>
           <p>Platform for matching IT professionals with hiring companies.</p>
         </div>
         <div
-          class="order6 portfolio-text mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-desktop">
+          class="portfolio-logo mdc-layout-grid__cell">
+          <a title="website of Go Real Europe" href="https://www.gorealeurope.com/"> <img src="/images/logo/GoRealEurope_logo.svg" alt="Logo Go Real Europe" height="70px" width="118"></a>
           <p>Europe Trip Planning app for 21st century.</p>
         </div>
       </div>
@@ -438,7 +429,7 @@
   </section>
   <section id="team" class="team">
     <figure>
-      <img class="team__photo" alt="" src="/images/team.jpg">
+      <img class="team__photo" alt="" src="https://res.cloudinary.com/topmonks/image/upload/f_auto,dpr_auto/v1558761742/startup%20studio/team.jpg">
       <figcaption>
         <div class="mdc-layout-grid">
           <div class="mdc-layout-grid__inner">
