Link na Blockchain.tm pro Profi-Option

--- a/blockchain.topmonks.com/src/html/index.html
+++ b/blockchain.topmonks.com/src/html/index.html
@@ -254,6 +254,8 @@
                   <em>Tomáš Paulus really knows what he's doing. Based on his research, he adapted the platform into a
                     usable form with a professional design. We certainly recommend him further.</em>
                 </p>
+                <p class="case-study_link"><a href="https://www.topmonks.com/case-studies/profi-option/">VIEW CASE STUDY</a>
+                </p>
               </blockquote>
             </div>
           </div>
