--- a/www.topmonks.com/src/html/jobs/index.html
+++ b/www.topmonks.com/src/html/jobs/index.html
@@ -545,31 +545,63 @@
 <section id="gallery">
   <div class="mdc-layout-grid__inner">
     <div class="gallery mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-      <img alt="Gallery Photo"
-           src="https://res.cloudinary.com/topmonks/image/upload/v1552317514/topmonks.com/jobs/galerry/img_meet1.png"
+      <img alt="Gallery Photo" loading="lazy"
+           src="https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,w_240/v1552317514/topmonks.com/jobs/galerry/img_meet1.png"
+           srcset="https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,w_240/v1552317514/topmonks.com/jobs/galerry/img_meet1.png 1x,
+                   https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,w_240,dpr_1.5/v1552317514/topmonks.com/jobs/galerry/img_meet1.png 1.5x,
+                   https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,w_240,dpr_2/v1552317514/topmonks.com/jobs/galerry/img_meet1.png 2x,
+                   https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,w_240,dpr_3/v1552317514/topmonks.com/jobs/galerry/img_meet1.png 3x"
            width="240" height="310">
-      <img alt="Gallery Photo"
-           src="https://res.cloudinary.com/topmonks/image/upload/v1552317285/topmonks.com/jobs/galerry/img_meet2.png"
+      <img alt="Gallery Photo" loading="lazy"
+           src="https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,w_630/v1552317285/topmonks.com/jobs/galerry/img_meet2.png"
+           srcset="https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,w_630/v1552317285/topmonks.com/jobs/galerry/img_meet2.png 1x,
+                   https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,w_630,dpr_1.5/v1552317285/topmonks.com/jobs/galerry/img_meet2.png 1.5x,
+                   https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,w_630,dpr_2/v1552317285/topmonks.com/jobs/galerry/img_meet2.png 2x,
+                   https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,w_630,dpr_3/v1552317285/topmonks.com/jobs/galerry/img_meet2.png 3x"
            width="630" height="310">
-      <img alt="Gallery Photo"
-           src="https://res.cloudinary.com/topmonks/image/upload/v1552317658/topmonks.com/jobs/galerry/img_meet3.png"
+      <img alt="Gallery Photo" loading="lazy"
+           src="https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,w_310/v1552317658/topmonks.com/jobs/galerry/img_meet3.png"
+           srcset="https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,w_310/v1552317658/topmonks.com/jobs/galerry/img_meet3.png 1x,
+                   https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,w_310,dpr_1.5/v1552317658/topmonks.com/jobs/galerry/img_meet3.png 1.5x,
+                   https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,w_310,dpr_2/v1552317658/topmonks.com/jobs/galerry/img_meet3.png 2x,
+                   https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,w_310,dpr_3/v1552317658/topmonks.com/jobs/galerry/img_meet3.png 3x"
            width="310" height="310">
-      <img alt="Gallery Photo"
-           src="https://res.cloudinary.com/topmonks/image/upload/v1552317381/topmonks.com/jobs/galerry/img_meet4.png"
+      <img alt="Gallery Photo" loading="lazy"
+           src="https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,w_240/v1552317381/topmonks.com/jobs/galerry/img_meet4.png"
+           srcset="https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,w_240/v1552317381/topmonks.com/jobs/galerry/img_meet4.png 1x,
+                   https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,w_240,dpr_1.5/v1552317381/topmonks.com/jobs/galerry/img_meet4.png 1.5x,
+                   https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,w_240,dpr_2/v1552317381/topmonks.com/jobs/galerry/img_meet4.png 2x,
+                   https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,w_240,dpr_3/v1552317381/topmonks.com/jobs/galerry/img_meet4.png 3x"
            width="240" height="310">
     </div>
     <div class="gallery mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-      <img alt="Gallery Photo"
-           src="https://res.cloudinary.com/topmonks/image/upload/v1552317538/topmonks.com/jobs/galerry/img_meet5.png"
+      <img alt="Gallery Photo" loading="lazy"
+           src="https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,w_240/v1552317538/topmonks.com/jobs/galerry/img_meet5.png"
+           srcset="https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,w_240/v1552317538/topmonks.com/jobs/galerry/img_meet5.png 1x,
+                   https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,w_240,dpr_1.5/v1552317538/topmonks.com/jobs/galerry/img_meet5.png 1.5x,
+                   https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,w_240,dpr_2/v1552317538/topmonks.com/jobs/galerry/img_meet5.png 2x,
+                   https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,w_240,dpr_3/v1552317538/topmonks.com/jobs/galerry/img_meet5.png 3x"
            width="240" height="310">
-      <img alt="Gallery Photo"
-           src="https://res.cloudinary.com/topmonks/image/upload/v1552317620/topmonks.com/jobs/galerry/img_meet6.png"
+      <img alt="Gallery Photo" loading="lazy"
+           src="https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,w_307/v1552317620/topmonks.com/jobs/galerry/img_meet6.png"
+           srcset="https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,w_307/v1552317620/topmonks.com/jobs/galerry/img_meet6.png 1x,
+                   https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,w_307,dpr_1.5/v1552317620/topmonks.com/jobs/galerry/img_meet6.png 1.5x,
+                   https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,w_307,dpr_2/v1552317620/topmonks.com/jobs/galerry/img_meet6.png 2x,
+                   https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,w_307,dpr_3/v1552317620/topmonks.com/jobs/galerry/img_meet6.png 3x"
            width="307" height="310">
-      <img alt="Gallery Photo"
-           src="https://res.cloudinary.com/topmonks/image/upload/v1552317723/topmonks.com/jobs/galerry/img_meet7.png"
+      <img alt="Gallery Photo" loading="lazy"
+           src="https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,w_562/v1552317723/topmonks.com/jobs/galerry/img_meet7.png"
+           srcset="https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,w_562/v1552317723/topmonks.com/jobs/galerry/img_meet7.png 1x,
+                   https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,w_562,dpr_1.5/v1552317723/topmonks.com/jobs/galerry/img_meet7.png 1.5x,
+                   https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,w_562,dpr_2/v1552317723/topmonks.com/jobs/galerry/img_meet7.png 2x,
+                   https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,w_562,dpr_3/v1552317723/topmonks.com/jobs/galerry/img_meet7.png 3x"
            width="562" height="310">
-      <img alt="Gallery Photo"
-           src="https://res.cloudinary.com/topmonks/image/upload/v1552317420/topmonks.com/jobs/galerry/img_meet8.png"
+      <img alt="Gallery Photo" loading="lazy"
+           src="https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,w_310/v1552317420/topmonks.com/jobs/galerry/img_meet8.png"
+           srcset="https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,w_310/v1552317420/topmonks.com/jobs/galerry/img_meet8.png 1x,
+                   https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,w_310,dpr_1.5/v1552317420/topmonks.com/jobs/galerry/img_meet8.png 1.5x,
+                   https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,w_310,dpr_2/v1552317420/topmonks.com/jobs/galerry/img_meet8.png 2x,
+                   https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,w_310,dpr_3/v1552317420/topmonks.com/jobs/galerry/img_meet8.png 3x"
            width="310" height="310">
     </div>
   </div>
@@ -595,7 +627,7 @@
       <div class="mdc-layout-grid__inner">
         <div
           class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-iphone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-2-desktop">
-          <img alt="[foto] Anička Kovácsová"
+          <img alt="[foto] Anička Kovácsová" loading="lazy"
                src="https://insight.topmonks.com/avatar/anna-kovacsova"
                onerror="this.onerror=null; this.src='/images/monk_logo-c877778634.png'"
                width="112" height="112"></div>
