--- a/www.topmonks.com/src/html/jobs/index.html
+++ b/www.topmonks.com/src/html/jobs/index.html
@@ -628,14 +628,18 @@
         <div
           class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-iphone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-2-desktop">
           <img alt="[foto] Anička Kovácsová" loading="lazy"
-               src="https://insight.topmonks.com/avatar/anna-kovacsova"
+               src="https://res.cloudinary.com/topmonks/image/fetch/w_112,f_auto/https://insight.topmonks.com/avatar/anna-kovacsova"
+               srcset="https://res.cloudinary.com/topmonks/image/fetch/w_112,f_auto/https://insight.topmonks.com/avatar/anna-kovacsova 1x,
+                       https://res.cloudinary.com/topmonks/image/fetch/w_112,f_auto,dpr_1.5/https://insight.topmonks.com/avatar/anna-kovacsova 1.5x,
+                       https://res.cloudinary.com/topmonks/image/fetch/w_112,f_auto,dpr_2/https://insight.topmonks.com/avatar/anna-kovacsova 2x,
+                       https://res.cloudinary.com/topmonks/image/fetch/w_112,f_auto,dpr_3/https://insight.topmonks.com/avatar/anna-kovacsova 3x,"
                onerror="this.onerror=null; this.src='/images/monk_logo-c877778634.png'"
                width="112" height="112"></div>
         <div
           class="box_member-contact mdc-layout-grid__cell mdc-layout-grid__cell--span-4-iphone mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-10-desktop">
-          <p><span itemprop="name">Anička Kovácsová</span><br><a
-            itemprop="telephone" href="tel:+420777556859">+420&nbsp;777 556 859</a><br><a itemprop="email"
-                                                                                          href="mailto:happy@topmonks.com">happy@topmonks.com</a>
+          <p><span itemprop="name">Anička Kovácsová</span>
+            <br><a itemprop="telephone" href="tel:+420777556859">+420&nbsp;777 556 859</a>
+            <br><a itemprop="email" href="mailto:happy@topmonks.com">happy@topmonks.com</a>
           </p></div>
       </div>
     </div>
@@ -643,7 +647,3 @@
 </section>
 
 {% endblock %}
-
-
-<p> it, just fill the form for relevant position below or <a href="mailto:jobs@topmonks.com">let us know</a> and we'll
-  discuss the details. We love meeting interesting people!</p>
