Jobs script has high priority

--- a/www.topmonks.com/src/html/jobs/index.html
+++ b/www.topmonks.com/src/html/jobs/index.html
@@ -18,7 +18,7 @@
     <div class="box jobs_positions mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
       <h3>Open positions</h3>
       <div class="hire-jobs"></div>
-      <script async type="module">
+      <script type="module">
         import { html, render } from "https://unpkg.com/lit-html?module";
         const list = document.querySelector(".hire-jobs");
         const jobsList = jobs => html`
