Use lit-html module w/o redirects

--- a/www.topmonks.com/src/html/jobs/index.html
+++ b/www.topmonks.com/src/html/jobs/index.html
@@ -2,7 +2,7 @@
 {% set page = 'topmonks-jobs' %}
 {% block title %}TopMonks Opened Job Positions{% endblock %}
 {% block head %}
-<link rel="preload" as="script" href="https://unpkg.com/lit-html?module">
+<link rel="preload" as="script" href="https://unpkg.com/lit-html@1.1.0/lit-html.js?module">
 <link rel="preload" as="fetch" href="https://hire.withgoogle.com/v2/api/t/topmonkscom/public/jobs">
 <link rel="stylesheet" href="/stylesheets/jobs.css">
 {% endblock %}
@@ -19,7 +19,7 @@
       <h3>Open positions</h3>
       <div class="hire-jobs"></div>
       <script type="module">
-        import { html, render } from "https://unpkg.com/lit-html?module";
+        import { html, render } from "https://unpkg.com/lit-html@1.1.0/lit-html.js?module";
         const list = document.querySelector(".hire-jobs");
         const jobsList = jobs => html`
           <ul>
