Move output assets to assets folder

--- a/www.topmonks.com/src/html/about-us/index.html
+++ b/www.topmonks.com/src/html/about-us/index.html
@@ -2,7 +2,7 @@
 {%- import 'macros/helpers.html' as macros -%}
 {% block title %} About Us - TopMonks{% endblock %}
 {% block head %}
-<link rel="stylesheet" href="/stylesheets/about-us.css">
+<link rel="stylesheet" href="/assets/css/about-us.css">
 {% endblock %}
 
 {% block content %}
