--- a/www.topmonks.com/src/html/case-studies/profi-option/index.html
+++ b/www.topmonks.com/src/html/case-studies/profi-option/index.html
@@ -11,12 +11,11 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Muli:400,700,800" rel="stylesheet">
-  <link rel="stylesheet" src="./assets/semantic.min.css">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="ima<ge/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="stylesheet" href="/stylesheets/profi-option.css">
-  <link rel="stylesheet" href="/stylesheets/main.css">
+  <link rel="stylesheet" href="/assets/css/profi-option.css">
+  <link rel="stylesheet" href="/assets/css/main.css">
 </head>
 <body>
 <header class="tm-app-bar">
@@ -519,7 +518,7 @@
         <div class="mdc-layout-grid__inner">
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-desktop">
             <img alt="[foto] Lea Petrášová" src="https://insight.topmonks.com/avatar/lea-petrasova"
-                 onerror="this.onerror=null; this.src='/images/monk_logo-c877778634.png'" width="100" height="100"
+                 onerror="this.onerror=null; this.src='/assets/img/monk_logo-c877778634.png'" width="100" height="100"
                  style="margin: 0.5em auto">
           </div>
           <div
