--- a/www.topmonks.com/src/html/index.html
+++ b/www.topmonks.com/src/html/index.html
@@ -21,7 +21,7 @@ TopMonks - Software development partner for your business
 <meta property="og:type" content="company">
 <meta property="og:url" content="https://www.topmonks.com/">
 <meta property="og:site_name" content="TopMonks.com">
-<link rel="stylesheet" href="/stylesheets/main.css">
+<link rel="stylesheet" href="/assets/css/main.css">
 <style>
   @media screen and (max-width: 479px) {
     body {
@@ -64,12 +64,12 @@ TopMonks - Software development partner for your business
     }
   }
 </style>
-<link rel="stylesheet" href="/stylesheets/hp/header.css">
+<link rel="stylesheet" href="/assets/css/hp/header.css">
 {% endblock %}
 
 {% block content %}
 <script>document.querySelector(".tm-app-bar").classList.add("tm-app-bar--sticky")</script>
-<link rel="stylesheet" href="/stylesheets/hp/jumbotron.css">
+<link rel="stylesheet" href="/assets/css/hp/jumbotron.css">
 <section class="main-info jumbotron">
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
@@ -87,7 +87,7 @@ TopMonks - Software development partner for your business
   </div>
 </section>
 
-<link rel="stylesheet" href="/stylesheets/hp/cooperation.css">
+<link rel="stylesheet" href="/assets/css/hp/cooperation.css">
 <section class="cooperation">
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
@@ -102,7 +102,7 @@ TopMonks - Software development partner for your business
   </div>
 </section>
 
-<link rel="stylesheet" href="/stylesheets/hp/how-we-work.css">
+<link rel="stylesheet" href="/assets/css/hp/how-we-work.css">
 <section id="how-we-work" class="how-we-work">
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
@@ -434,7 +434,7 @@ TopMonks - Software development partner for your business
   </div>
 </section>
 
-<link rel="stylesheet" href="/stylesheets/hp/funnel.css">
+<link rel="stylesheet" href="/assets/css/hp/funnel.css">
 <section class="product">
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
@@ -477,7 +477,7 @@ TopMonks - Software development partner for your business
 {% set caseStudiesData = { title : 'Case Studies', subTitle : 'We have learned something from every collaboration with our clients.'} %}
 {% include 'components/case-studies/index.html' %}
 
-<link rel="stylesheet" href="/stylesheets/hp/testimonials.css">
+<link rel="stylesheet" href="/assets/css/hp/testimonials.css">
 <section class="testimonials">
   <div class="tm-bgnd-wrapper">
     <div class="mdc-layout-grid">
@@ -555,7 +555,7 @@ TopMonks - Software development partner for your business
                          https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_1.5,f_auto/https://insight.topmonks.com/avatar/simona-zabrzova 1.5x,
                          https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_2,f_auto/https://insight.topmonks.com/avatar/simona-zabrzova 2x,
                          https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_3,f_auto/https://insight.topmonks.com/avatar/simona-zabrzova 3x"
-                 onerror="this.onerror=null; this.src='/images/monk_logo-c877778634.png'"
+                 onerror="this.onerror=null; this.src='/assets/img/monk_logo-c877778634.png'"
                  width="112" height="112"></div>
           <div class="box_member-contact mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
             <p><span itemprop="name">Simona Zábržová</span><br>
@@ -578,7 +578,7 @@ TopMonks - Software development partner for your business
                     https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_1.5,f_auto/https://insight.topmonks.com/avatar/ladislav-gerencsery 1.5x,
                     https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_2,f_auto/https://insight.topmonks.com/avatar/ladislav-gerencsery 2x,
                     https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_3,f_auto/https://insight.topmonks.com/avatar/ladislav-gerencsery 3x"
-            onerror="this.onerror=null; this.src='/images/monk_logo-c877778634.png'"
+            onerror="this.onerror=null; this.src='/assets/img/monk_logo-c877778634.png'"
             width="112" height="112"></div>
           <div class="box_member-contact mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
             <p><span itemprop="name">Ladislav Gerencséry</span><br>
