--- a/www.topmonks.com/src/html/meet-us/index.html
+++ b/www.topmonks.com/src/html/meet-us/index.html
@@ -1,7 +1,7 @@
 {% extends 'layouts/topmonks.html' %}
 {% block title %}Meet Us - TopMonks{% endblock %}
 {% block head %}
-<link rel="stylesheet" href="/stylesheets/meet-us.css">
+<link rel="stylesheet" href="/assets/css/meet-us.css">
 {% endblock %}
 
 {% block content %}
