--- a/www.topmonks.com/src/html/case-studies/xixoio/index.html
+++ b/www.topmonks.com/src/html/case-studies/xixoio/index.html
@@ -9,10 +9,8 @@
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="stylesheet" src="./assets/semantic.min.css">
-  <link rel="stylesheet" href="/stylesheets/xixoio.css">
-
-
+  <link rel="stylesheet" href="/assets/css/xixoio.css">
+  
 </head>
 <body>
 <header class="tm-app-bar">
