--- a/www.topmonks.com/src/html/case-studies/profi-option/index.html
+++ b/www.topmonks.com/src/html/case-studies/profi-option/index.html
@@ -5,15 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Profi Option</title>
-  <meta name="Description" content="TopMonks Case Study - Profi Option">
+  <title>TopMonks Case Study - Profi Option</title>
   <link rel="preconnect" href="//res.cloudinary.com">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Muli:400,700,800" rel="stylesheet">
+  <script>WebFontConfig = { typekit: {id: 'her1ktw'}, async: true }</script>
+  <script async src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" defer crossorigin="anonymous"></script>
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="ima<ge/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="stylesheet" href="/assets/css/profi-option.css">
   <link rel="stylesheet" href="/assets/css/main.css">
 </head>
