Progressively enhanced Jobs listing

--- a/www.topmonks.com/src/html/jobs/index.html
+++ b/www.topmonks.com/src/html/jobs/index.html
@@ -19,7 +19,9 @@
     </div>
     <div class="box jobs_positions mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
       <h3>Open positions</h3>
-      <div class="hire-jobs"></div>
+      <div class="hire-jobs">
+        <a href="https://hire.withgoogle.com/public/jobs/topmonkscom">See open positions on Google Hire</a>
+      </div>
       <script type="module">
         import { html, render } from "https://unpkg.com/lit-html@1.1.0/lit-html.js?module";
         const list = document.querySelector(".hire-jobs");
