--- a/www.topmonks.com/src/html/index.html
+++ b/www.topmonks.com/src/html/index.html
@@ -93,7 +93,7 @@ TopMonks - Software development partner for your business
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <a href="https://www.erstegroupit.com/en/home" title="Erste Group homepage">{{sprite('img_logo_erste-group', '[logo] Erste Group')}}</a>
-        <a href="https://www.pricefx.eu/site/" title="Pricef(x) homepage">{{sprite('img_logo_pricefx', '[logo] Pricef(x)')}}</a>
+        <a href="https://www.pricefx.eu/site/" title="PriceFx homepage">{{sprite('img_logo_pricefx', '[logo] PriceFx')}}</a>
         <a href="https://zonky.cz/" title="Zonky homepage">{{sprite('img_logo_zonky', '[logo] Zonky')}}</a>
         <a href="https://www.adler.info/CZ/cs/Home/" title="Adler homepage">{{sprite('img_logo_adler', '[logo] Adler')}}</a>
         <a href="https://www.shoptet.cz" title="Shoptet homepage">{{sprite('img_logo_shoptet', '[logo] Shoptet')}}</a>
